# OTUS_Student_ASB

./: 06.homework.cpp  06.homework.h  06_00_homework.cpp  06_01_homework.cpp  06_01_homework.h  CMakeLists.txt  README.md  TEST_FILES_1.md  argument.cpp  argument.h  check_value.cpp  data_container.cpp  data_container.h  hello_world.cpp  high_scores.cpp  high_scores.h  indicator_calculator.cpp  indicator_calculator.h  json_writer.cpp  json_writer.h  main.cpp  random_value.cpp  random_value.h  samplefile  samplefile.cpp  statistics.cpp
